--- a/.bpan/config
+++ b/.bpan/config
@@ -1,5 +1,6 @@
 [bpan]
-version = 0.1.95
+version = 0.1.96
+updated = 2022-12-11-18-42-19
 
 [package]
 name = bashplus
@@ -9,24 +10,14 @@ license = MIT
 copyright = 2022
 tag = bash plus
 
-owner = bpan-org
-source = https://github.com/$package.owner/$package.name
-branch = main
-
-site = $package.source
-bug = $package.source/issues/
+bug = https://github.com/bpan-org/bashplus/issues/
 irc = irc.libera.chat/bpan
 
 [author "github:ingydotnet"]
 name = Ingy döt Net
 email = ingy@ingy.net
-host = github
-user = ingydotnet
-
-twitter = ingydotnet
 irc = ingy@irc.libera.chat
 matrix = @ingy:yaml.io
-site = http://ingy.net
 
 [update]
 file = License
